--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <div id="box">
     <form action="#">
       <div class="form-group">
-       <input type="text"name="name"placeholder="Email adress or phone number"id="email"autoComplete="off"><br>
+       <input type="text"name="name"placeholder="Email adress or phone number"id="email"class="form-control"autoComplete="off"><br>
        <span id="emailid"></span>
       </div>
 
       <div class="form-group">
-       <input type="password"name="password"placeholder="password"id="password"><br>
+       <input type="password"name="password"placeholder="password"id="password"class="form-control"><br>
        <span id="pass"></span>
       </div>
 
@@ -23,6 +23,7 @@
       <a id="pass-link"href="#" >Forgotton password?</a><hr><br>
       <a id="acc-link"href="#">Create New Account</a> 
      </div>
+  
     </form>
   </div>
   </div> 
