--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
      <div>
-      <button type="submit"id="btn1"onClick="return Validation()">Log in</button><br>
+      <button type="submit"id="btn"onClick="return Validation()">Log in</button><br>
       <a id="pass-link"href="#" >Forgotton password?</a><hr><br>
       <a id="acc-link"href="#">Create New Account</a> 
      </div>
