--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div id="container">
   <div id="box">
-    <form action="#">
+    <form action="#"method="post">
       <div class="form-group">
        <input type="text"name="name"placeholder="Email adress or phone number"id="email"class="form-control"autoComplete="off"><br>
        <span id="emailid"></span>
